--- a/.github/workflows/newifi3.yml
+++ b/.github/workflows/newifi3.yml
@@ -10,7 +10,7 @@ on:
 #    branches:
 #      - main
 #    paths:
-      - '.config'
+#      - '.config'
   #schedule:
   #    - cron: 0 22 * * *
   watch:
